--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,7 +49,7 @@
           = render 'shared/horizontal_slider', items: @techniques, direction: 'left'
         .span6
           %p.lead
-            %strong Pefect a New Technique
+            %strong Perfect a New Technique
             %br
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pretium elit nec tortor ultrices rhoncus. Vestibulum malesuada lacus eu nibh fringilla convallis. Maecenas quis dui nisi, id lobortis nulla. Phasellus fringilla sem in dolor ornare tempus. Curabitur nec bibendum urna.
 
