--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -686,8 +686,10 @@ h1, h2, h3, h4
   background: $orange
   border: 0px
   border-radius: 0px
+  position: relative
   @include boxsizing
   @include transition(all 100ms)
+  z-index: 9999
   &:hover
     background: $darker_orange
     @include transition(all 100ms)
