--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -2,10 +2,10 @@
   .row-fluid
     .container
       .row
-        .span12
+        .span8.offset2
           = form_tag sign_up_url, :method => :get, class: 'form-inline' do
             .madlib
-              %span.text-orange
+              %p.text-orange
                 Hi ChefSteps,
               %p
                 I am
