--- a/app/views/activities/_edit_title.html.haml
+++ b/app/views/activities/_edit_title.html.haml
@@ -1,2 +1,2 @@
-= semantic_form_for [@activity], url: update_edit_partial_activity_path, :html => {:method => :post}, validate: true, remote: true do |f|
-  = f.input :title, label: false, as: :text, input_html: {class: "nohtml", rows: "2"}
+.show-when-editing
+  = text_area_tag :title, "hi", {class: "nohtml", rows: "2", :'data-ng-model' => "activity.title"}
