--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,9 @@
     - unless yield(:canonical_link).blank?
       %link{rel: "canonical", href: yield(:canonical_link) }
     = render 'layouts/google_analytics' if Rails.env.production?
+    = javascript_include_tag 'angular'
+    = javascript_include_tag 'angular-resource'
+    = javascript_include_tag 'chefstepsAngularInit'
 
   %body
     = render 'layouts/navigation', external: false
