--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -62,7 +62,7 @@
         .span6
           = render 'shared/horizontal_slider', items: @sciences, direction: 'right'
 
-- if @new_user
+- if @new_visitor
   .container
     .row.section
       %span12
