--- a/app/views/shared/_media_box_2.html.haml
+++ b/app/views/shared/_media_box_2.html.haml
@@ -1,4 +1,5 @@
 .media-box-2
   = link_to url do
     = truncate(title, length: 38)
-    = image_tag filepicker_gallery_image(image)
+    - if image
+      = image_tag filepicker_gallery_image(image)
