--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -54,5 +54,23 @@
   .row-fluid
     .container
       .row.section
+        %h2.text-orange Instructors
+        .span2
+          = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
+        .span4
+          :markdown
+            #{bio_chris.copy.to_s}
+        .span2
+          = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
+        .span4
+          :markdown
+            #{bio_grant.copy.to_s}
+
+%hr
+
+.container-fluid
+  .row-fluid
+    .container
+      .row.section
         = render 'layouts/disqus_comments', disqus_id: "course-#{course.id}", disqus_title:course.title, disqus_url: course_url
 
