course landing updates

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -55,6 +55,7 @@
     .container
       .row.section
         %h2.text-orange Instructors
+      .row.section
         .span2
           = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
         .span4
