remove focus view and add step ingredients in step

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -436,7 +436,7 @@ h1, h2, h3, h4
     font-weight: 40
 
 .step-ingredients-source
-  display: none
+  //display: none
 
 #main-content
   position: relative
