--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -61,12 +61,15 @@
             .step-element.step-content
               - if step.title?
                 %h4= step.title
+              - if step.ingredients.any?
+                .step-ingredients-source.well
+                  = render 'ingredients_list', ingredients: step.ingredients
               :markdown
                 #{apply_shortcodes(step.directions)}
               .step-actions.btn-group
-                -if step.ingredients.any?
-                  .btn.step-action-item.step-ingredients.btn-primary
-                    %i.icon-th-list
+                / -if step.ingredients.any?
+                /   .btn.step-action-item.step-ingredients.btn-primary
+                /     %i.icon-th-list
                 - if step.image_id?
                   .btn.step-action-item.step-image-btn.btn-primary
                     %i.icon-picture
@@ -81,8 +84,6 @@
                 .step-video{id: "step-video-#{index}"}
                   .video-container
                     %iframe{src: youtube_url(step.youtube_id)}
-              - if step.ingredients.any?
-                .step-ingredients-source.well.section
-                  = render 'ingredients_list', ingredients: step.ingredients
+
     .scroll-overlay-top
     .scroll-overlay-bottom
