--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -19,3 +19,23 @@
       .container-fluid
         .row-fluid
           = render 'main_activity_content', activity: @activity
+
+- content_for :popup_bottom do
+  .container-fluid.popup-bottom
+    .row-fluid
+      .span12
+        .course-nav-bottom
+          - prev_activity = @course.prev_published_activity(@activity)
+          - next_activity = @course.next_published_activity(@activity)
+          - if prev_activity
+            .course-nav-bottom-left
+              = link_to [@course, prev_activity], class: 'btn btn-primary' do
+                %i.icon-chevron-left
+                = 'Previous: ' + prev_activity.title
+          .course-nav-bottom-center
+            %h3= @activity.title
+          - if next_activity
+            .course-nav-bottom-right
+              = link_to [@course, next_activity], class: 'btn btn-primary' do
+                = 'Next: ' + next_activity.title
+                %i.icon-chevron-right
