--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -3,8 +3,17 @@
     = render 'show_hero_visual', activity: activity
   - cache [activity, 'ingredients'] do
     - if activity.description?
-      .section.activity-description-wrapper{data: {wysiwyg: "description"}}
-        = render 'show_description', activity: activity
+      .edit-pair#edit-pair-description(ng-switch="" on="activeEdit=='edit-pair-description'" ng-mouseover="offerEdit()")
+        .edit-pair-show(ng-switch-when="false")
+          .section.activity-description-wrapper
+            .activity-description#activity-description
+              {{activity.description}}
+              .activity-description-overlay
+            .text-center(ng-hide="editMode")
+              = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
+        .edit-pair-form(ng-switch-when="true")
+          = text_area_tag :title, "hi", {data: {:'ng-model' => "activity.description"}}
+
     - if activity.ingredients.any?
       .section
         .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
