--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -13,10 +13,14 @@
   .row
     .span2
       %ul
-        %li some list
-        %li some list item
+        - @activities_within_module.each do |activity|
+          %li
+            = link_to [@course, activity] do
+              = activity.title
     .span10
       .container-fluid
+        .row-fluid
+          %h2= @activity.title
         .row-fluid
           = render 'main_activity_content', activity: @activity
 
