--- a/app/views/activities/_edit_toolbar.haml
+++ b/app/views/activities/_edit_toolbar.haml
@@ -1,5 +1,5 @@
 #edit-group
-  %button#edit-mode.btn.btn-primary(type='button' ng-click="editMode=true" ng-hide="editMode")
+  %button#edit-mode.btn.btn-primary(type='button' ng-click="startEditMode()" ng-hide="editMode")
     Edit
   .btn-toolbar(ng-show="editMode")
     .btn-group
@@ -29,10 +29,10 @@
       %button#edit-redo.btn.btn{type: 'button'}
         %i.icon-repeat
     .btn-group
-      %button#edit-save.btn.btn-primary(type='button' ng-click="editMode=false" ng-show="editMode")
+      %button#edit-save.btn.btn-primary(type='button' ng-click="endEditMode()" ng-show="editMode")
         Save
     .btn-group
-      %button#edit-cancel.btn.btn-link(ng-click="window.alert('yo')"){type: 'button', zzzdata: {toggle: 'modal', target: '#cancel-modal'}}
+      %button#edit-cancel.btn.btn-link{type: 'button', data: {toggle: 'modal', target: '#cancel-modal'}}
         Cancel
 
 #cancel-modal.modal.hide.fast{tabindex: '-1', role: 'dialog'}
@@ -44,5 +44,5 @@
     .modal-footer
       %button.btn.btn-success{data: {dismiss: 'modal'}}
         No !!
-      %button.btn.btn-danger#edit-really-cancel
+      %button.btn.btn-danger(ng-click="cancelEditMode()"){data: {dismiss: 'modal'}}
         Yes
