--- a/app/views/activities/_edit_toolbar.haml
+++ b/app/views/activities/_edit_toolbar.haml
@@ -24,9 +24,9 @@
       -#  %li
       -#    =link_to "Steps", "#"
 
-      %button#edit-undo.btn.btn{type: 'button'}
+      %button#edit-undo.btn.btn(ng-click="undo()" ng-disabled="! undoAvailable()"){type: 'button'}
         %i.icon-undo
-      %button#edit-redo.btn.btn{type: 'button'}
+      %button#edit-redo.btn.btn(ng-click="redo()" ng-disabled="! redoAvailable()"){type: 'button'}
         %i.icon-repeat
     .btn-group
       %button#edit-save.btn.btn-primary(type='button' ng-click="endEditMode()" ng-show="editMode")
