course activity page upates

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -109,6 +109,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(242,242,242,1) 100%)
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2',GradientType=0 )
 
+.well-gray
+  padding: 20px
+  background: $offwhite
+
 .hero-unit
   background: none
   border-radius: 0px
