increase course activity navigation span

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -1,5 +1,9 @@
 @import 'mixins'
 
+.course_activity_content
+  padding: 0px
+  overflow: hidden
+
 .course-nav-bottom
   position: relative
   .course-nav-bottom-left
