course nav updates

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -135,6 +135,9 @@ h1, h2, h3, h4
 .display-inline-fix
   word-spacing : -4px
 
+.indent-1
+  padding-left: 20px
+
 ////////////////////////////////////////
 
 /* Media Objects */
