--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -138,6 +138,9 @@ h1, h2, h3, h4
 .indent-1
   padding-left: 20px
 
+.indent-2
+  padding-left: 40px
+
 ////////////////////////////////////////
 
 /* Media Objects */
