--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -16,11 +16,11 @@
     .span3
       %ul.nav.nav-tabs.nav-stacked
         - @course.child_inclusions(@current_module).each do |inclusion_1|
-          %li
+          %li{class: inclusion_1 == @current_inclusion ? 'active' : ''}
             = link_to inclusion_1.activity.title, [@course, inclusion_1.activity]
           - if inclusion_1 == @course.parent_inclusion(@current_inclusion) || inclusion_1 == @current_inclusion
             - @course.child_inclusions(inclusion_1).each do |inclusion_2|
-              %li
+              %li{class: inclusion_2 == @current_inclusion ? 'active' : ''}
                 = link_to [@course, inclusion_2.activity] do
                   .indent-1
                     = inclusion_2.activity.title
