top container responsive

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1075,6 +1075,9 @@ h1, h2, h3, h4
     &:hover
       color: #fff
 
+  .top-container
+    margin-top: 0px
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   #hero-container
@@ -1138,6 +1141,9 @@ h1, h2, h3, h4
     color: #333
     &:hover
       color: #fff
+
+  .top-container
+    margin-top: 0px
  
 /* Landscape phones and down */
 @media (max-width: 480px)
@@ -1172,3 +1178,6 @@ h1, h2, h3, h4
     font-weight: normal
     &:hover
       color: #fff
+
+  .top-container
+    margin-top: 0px
