--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -1,7 +1,7 @@
 .container.top-container
   .row
     .span12.section
-      %h1= @course.title
+      %h2= @course.title
   .row
     .span12
       %ul.nav.nav-pills
@@ -13,8 +13,8 @@
                 
 .container
   .row
-    .span3
-      %ul.nav.nav-tabs.nav-stacked
+    .span3.affix-parent
+      %ul.nav.nav-tabs.nav-stacked.course-nav-side{data: {spy: 'affix', :'offset-top' => '100'}}
         - @course.child_inclusions(@current_module).each do |inclusion_1|
           %li{class: inclusion_1 == @current_inclusion ? 'active' : ''}
             - if inclusion_1.activity.published?
@@ -32,10 +32,10 @@
                   = link_to '#' do
                     .indent-1
                       = inclusion_2.activity.title.html_safe
-    .span9
+    .span9.affix-parent
       .container-fluid.course_activity_content
         .row-fluid
-          %h2= @activity.title.html_safe
+          %h3= @activity.title.html_safe
         .row-fluid
           = render 'main_activity_content', activity: @activity
 
