--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -12,6 +12,9 @@
     .row
       margin-left: inherit
 
+.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
+  width: 1170px
+
 #slider-container
   background: $offwhite
   .row
@@ -1028,6 +1031,9 @@ h1, h2, h3, h4
     height: 100px
 
 @media (max-width: 1200px)
+  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
+    width: 940px
+
   .media-centered-medium
     height: 168px
 
@@ -1047,6 +1053,9 @@ h1, h2, h3, h4
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
+  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
+    width: 724px
+
   #hero-container
     #hero-carousel
       .media-heading
@@ -1080,6 +1089,9 @@ h1, h2, h3, h4
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
+  .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
+    width: auto
+
   #hero-container
     width: 100%
     left: 0px
