side nav styling

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -17,3 +17,15 @@
     position: absolute
     top: 10px
     right: 10px
+
+.course-nav-side
+  font-family: 'Raleway', sans-serif
+  border: 1px solid $orange
+  border-radius: 5px
+  padding: 5px 0px
+  @include boxsizing
+  ul
+    margin-bottom: 0px
+    li
+      a
+        border: 0px
