--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -4,7 +4,22 @@
   padding: 0px
   overflow: hidden
 
+.course-nav-top
+  font-family: 'Raleway', sans-serif
+
+.course-nav-side
+  font-family: 'Raleway', sans-serif
+  border: 1px solid $orange
+  border-radius: 5px
+  padding: 5px 0px
+  @include boxsizing
+  ul
+    margin-bottom: 0px
+  .nav-tabs.nav-stacked > li > a
+    border: 0px
+
 .course-nav-bottom
+  font-family: 'Raleway', sans-serif
   position: relative
   .course-nav-bottom-left
     position: absolute
@@ -17,15 +32,3 @@
     position: absolute
     top: 10px
     right: 10px
-
-.course-nav-side
-  font-family: 'Raleway', sans-serif
-  border: 1px solid $orange
-  border-radius: 5px
-  padding: 5px 0px
-  @include boxsizing
-  ul
-    margin-bottom: 0px
-    li
-      a
-        border: 0px
