--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -6,6 +6,22 @@
 
 .course-nav-top
   font-family: 'Raleway', sans-serif
+  position: relative
+  .course-nav-top-prev
+    float: left
+    margin: 0px
+    margin-right: 5px
+    height: 34px
+    width: 34px
+    padding: 5px
+    font-size: 16px
+    border: 2px solid $light-gray
+    color: $light-gray
+    &:hover
+      background: gray
+      color: white
+  ul
+    float: left
 
 .course-nav-side
   font-family: 'Raleway', sans-serif
