--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -2,14 +2,14 @@
 /   %i.icon-envelope-alt
 / = link_to 'javascript:void(0);', class: 'btn-circle' do
 /   %i.icon-phone
-= link_to 'javascript:void(0);', class: 'btn-circle social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true} do
+= link_to 'javascript:void(0);', class: 'btn-circle btn-primary social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true} do
   %i.icon-facebook
 = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
-'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn-circle' do
+'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn-circle btn-primary' do
   %i.icon-google-plus
-= link_to "https://twitter.com/intent/tweet?text=I love this: #{media_object.title} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn-circle' do
+= link_to "https://twitter.com/intent/tweet?text=I love this: #{media_object.title} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn-circle btn-primary' do
   %i.icon-twitter
 - if media_object.featured_image
   = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{filepicker_hero_image(media_object.featured_image)}", onclick: "javascript:window.open(this.href,
-  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn-circle' do
+  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn-circle btn-primary' do
     %i.icon-pinterest
