--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -717,7 +717,7 @@ h1, h2, h3, h4
     @include transition(all 100ms)
 
 .btn-gray
-  background: $light-gray
+  background: $offwhite
   border: none
   border-radius: 0px
   @include transition(all 100ms)
@@ -768,12 +768,11 @@ h1, h2, h3, h4
     top: 50%
 
 .btn-circle
-  height: 20px
-  width: 20px
+  height: 40px
+  width: 40px
   padding: 10px
   margin: 5px 2px
   border-radius: 50%
-  background: $orange
   background-image: none
   color: white
   font-size: 20px
@@ -784,6 +783,7 @@ h1, h2, h3, h4
   -moz-transition: background 200ms
   -o-transition: background 200ms
   display: inline-block
+  @include boxsizing
   i
     line-height: 22px
   &:hover
