slick course top navbar

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -22,6 +22,14 @@
       color: white
   ul
     float: left
+    li
+      height: 34px
+      overflow: hidden
+      white-space: nowrap
+    .hide-course-navbar-item
+      width: 0px
+    .show-course-navbar-item
+      width: auto
 
 .course-nav-side
   font-family: 'Raleway', sans-serif
