--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -6,13 +6,13 @@
     .span12.course-nav-top
       .course-nav-top-prev.btn.btn-gray.btn-circle
         %i.icon-chevron-left
-      %ul.nav.nav-pills
+      %ul.nav.nav-pills#course-navbar-top
         - hide_nav_item = true
         - @course.activity_modules.each_with_index do |activity_module, index|
           - active = activity_module == @current_module.activity ? 'active' : nil
           - if active == 'active' && hide_nav_item
             - hide_nav_item = false
-          - hide = hide_nav_item ? 'hide' : nil
+          - hide = hide_nav_item ? 'hide-course-navbar-item' : nil
           %li{class: "#{active} #{hide}"}
             = link_to [@course, @course.next_published_activity(activity_module)] do
               = "#{index + 1}."
