--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -35,7 +35,7 @@
         - if ! @minimal
           .pull-left.display-inline-fix
             - if @course
-              .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
+              .btn-circle.btn-primary{data: {toggle: 'modal', target: '#syllabus-modal'}}
                 %i.icon-file-alt
               - prev_activity = @course.prev_published_activity(@activity)
               - next_activity = @course.next_published_activity(@activity)
@@ -45,9 +45,9 @@
               - if next_activity
                 = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
                   %i.icon-chevron-right
-            .btn-circle#show-all
+            .btn-circle.btn-primary#show-all
               %i.icon-resize-full#show-all-icon
-            .btn-circle{onclick: 'window.print()'}
+            .btn-circle.btn-primary{onclick: 'window.print()'}
               %i.icon-print
           .pull-right.display-inline-fix
             = render 'layouts/social_buttons', media_object: @activity
